TEMPLATE MEDIA QUERIES V0.1

--- a/src/SASS/index.scss
+++ b/src/SASS/index.scss
@@ -1,18 +1,50 @@
+//VARIABLES
+@use './Variables' as *;
+
+
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
+//MEDIA
+@import './COMPONENTS/MEDIA_QUERIES/MediaQueries.scss';
+
+
+
+
+
 $color: rgb(13, 112, 224);
+/* $media_phone: 480;
+$media_tablet: 820;
+$media_desktop: 1024; */
+
+@mixin styles_phone () {
+  background-color: #f56709;
+  
+}
+
+@mixin styles_tablets () {
+  background-color: blue; 
+}
+
+@mixin styles_desktop () {
+  background-color: red;
+}
 
 
 
-@mixin borde-redondeado($color) {
-    background-color: $color;
+
+.testingPage{
+  @include media-query($media_phone){
+    @include styles_phone();
   }
 
-div{
-    @include borde-redondeado($color); // Llama al mixin con un radio de 5px
-    
-   
+  @include media-query($media_tablet){
+    @include styles_tablets();
+  }
+
+  @include media-query($media_desktop){
+    @include styles_desktop();
+  }
+
 }
-  
   
   
