--- a/src/SASS/COMPONENTS/REUSABLE_COMPONENTS/Navbar.scss
+++ b/src/SASS/COMPONENTS/REUSABLE_COMPONENTS/Navbar.scss
@@ -27,7 +27,17 @@
 
 
 
-.testingPage{
+nav{
+
+  ul{
+    display: flex;
+    justify-content: space-around;
+  }
+  
+
+  
+  
+  
   @include media-query($media_phone){
     @include styles_phone();
   }
