--- a/src/SASS/TEMPLATES/TURISM/02.1-AnnouncementParagraph.scss
+++ b/src/SASS/TEMPLATES/TURISM/02.1-AnnouncementParagraph.scss
@@ -13,6 +13,9 @@
 
 @mixin styles_tablets () {
   border: 1px solid blue;
+
+  display: flex;
+  justify-content: space-around;
 }
 
 @mixin styles_desktop () {
@@ -23,6 +26,23 @@
 
 
 .AnnouncementParagraph{
+
+  height: 30vh;
+
+  position: relative;
+  img{
+    border: 1px solid purple;
+    width: 100%;
+    height: 30vh;
+
+    position:absolute;
+
+  }
+
+  p{
+    position: absolute;
+    left: 20%
+  }
   @include media-query($media_phone){
     @include styles_phone();
   }
