--- a/src/SASS/TEMPLATES/TURISM/04.1-WrapperArticleTwo.scss
+++ b/src/SASS/TEMPLATES/TURISM/04.1-WrapperArticleTwo.scss
@@ -4,25 +4,121 @@
 //MEDIA
 @import '../../COMPONENTS/MEDIA_QUERIES/MediaQueries.scss';
 
+@mixin useToggle {
+  border: 1px solid red;
+  height: 30vh;
+  
+  display: flex;
+
+  .WrapperButtons{
+    display: flex;
+    flex-direction: column;
+
+    padding: 10px;
+
+    button{
+      
+      background-color: rgb(224, 221, 221);
+
+      height: 50px;
+
+      border-radius: 5px;
+      border: 1px solid black;
+
+      &:active,
+      &:focus{
+        background-color: white;
+
+        border: none;
+      }
+    }
+
+  }
+  section{
+    display: flex;
+    justify-content: space-around;
+
+    width: 60%;
+    padding: 5px;
+
+    border: 1px solid  purple;
+  }
+}
+
 
 
 @mixin styles_phone () {
-  border: 1px solid yellow;
+
+  border: 1px solid red;
+  height: 40vh;
+  
+  display: flex;
+  
+  .WrapperButtons{
+    display: flex;
+    flex-direction: column;
+
+    
+    width: 30%;
+    
+
+    button{
+      
+      background-color: rgb(224, 221, 221);
+
+      height: auto;
+      margin: 10px;
+      padding: 5px;
+      
+
+      border-radius: 5px;
+      border: 1px solid black;
+
+      &:active,
+      &:focus{
+        background-color: white;
+
+        border: none;
+      }
+    }
+
+  }
+  section{
+    display: flex;
+    flex-direction: column;
+    
+
+    width: 80%;
+    padding: 15px;
+
+    border: 1px solid  purple;
+
+    img{
+      border: 1px solid blue;
+      height: 130px;
+    }
+  }
+  
   
 }
 
 @mixin styles_tablets () {
-  border: 1px solid blue;
+ 
+
+  @include useToggle();
 }
 
 @mixin styles_desktop () {
-  border: 1px solid red;
+ 
+
+  @include useToggle();
 }
 
 
 
 
 .ContentElement{
+  
   @include media-query($media_phone){
     @include styles_phone();
   }
