isActivate and style: applying isActive props and styleing

--- a/src/SASS/COMPONENTS/REUSABLE_COMPONENTS/Navbar.scss
+++ b/src/SASS/COMPONENTS/REUSABLE_COMPONENTS/Navbar.scss
@@ -52,6 +52,14 @@
     font-weight: bold;
   }
 
+  .logIn{
+    border: 1px solid green;
+  }
+
+  .logOut{
+    border: 1px solid red;
+  }
+
 
   
 }
