--- a/src/SASS/TEMPLATES/TURISM/03.1-ChildrenWrapperImageTwo.scss
+++ b/src/SASS/TEMPLATES/TURISM/03.1-ChildrenWrapperImageTwo.scss
@@ -89,6 +89,7 @@
     width: 100%;
     
     display: flex;
+
     justify-content: space-around;
     align-items: center;
 
@@ -96,7 +97,7 @@
 
     img{
 
-      width: 250px;
+      width: 300px;
       height: 250px;
       min-width: 100px;
 
@@ -111,21 +112,26 @@
 
   
 
-  height: 70vh;
+  height: 40vh;
   margin: 0 auto;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 
   
   
+  .infoWrapper{
+    width: 50%;
 
+    text-align: center;
+
+    border: 1px solid purple;
+  }
   figure{
 
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    width: 50%;
+
+    
 
     overflow: hidden;
 
@@ -134,12 +140,10 @@
     img{
 
     
+      min-width: 100%;
       
-      max-width: 100%;
-      max-height: 100%;
 
-      min-width: 500px;
-      min-height: 250px;
+      width: 100px;
 
       border: 1px solid rgb(57, 243, 10);
     }
@@ -151,7 +155,7 @@
 
 
 
-.ChildrenWrapperImage{
+.ChildrenWrapperImageTwo{
   @include media-query($media_phone){
     @include styles_phone();
   }
