--- a/src/SASS/TEMPLATES/TURISM/03.1-ChildrenWrapperImageTwo.scss
+++ b/src/SASS/TEMPLATES/TURISM/03.1-ChildrenWrapperImageTwo.scss
@@ -44,7 +44,15 @@
   margin: 0 auto;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
+
+  .infoWrapper{
+    width: 100%;
+    height: auto;
+    border: 1px solid purple;
+    text-align: center;
+  }
   
 
   figure{
@@ -79,19 +87,25 @@
 
   height: 40vh;
   margin: 0 auto;
+  padding: 10px;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+
+  .infoWrapper{
+    width: 50%;
+    border: 1px solid purple;
+    text-align: center;
+  }
   
 
   figure{
 
-    width: 100%;
+    width: 50%;
     
     display: flex;
-
-    justify-content: space-around;
-    align-items: center;
+    
+    
 
     border: 1px solid purple;
 
