--- a/src/SASS/COMPONENTS/Variables.scss
+++ b/src/SASS/COMPONENTS/Variables.scss
@@ -9,3 +9,10 @@ $ancho-telefono: 480px;
 $ancho-tablet: 820px; 
 $ancho-computadora: 1024px;
 
+//styles buttons
+//Input button
+$InputbackColor: yellow;
+$InputbackColorTwo: blue;
+$InputWidth: 60px;
+$InputHeight: 35px;
+
