--- a/src/SASS/COMPONENTS/REUSABLE_COMPONENTS/Typesbuttons.scss
+++ b/src/SASS/COMPONENTS/REUSABLE_COMPONENTS/Typesbuttons.scss
@@ -3,10 +3,22 @@
 
 @mixin InputButton_A () {
     background-color: $InputbackColor;
+    background-color: rgb(3, 46, 236);
+    width: 160px;
+    height: 40px;
+
+    position: absolute;
+    top: 60%;
+    left: 40%;
+    
 }
 
 @mixin SendButton_B () {
     background-color: red;
     width: 160px;
     height: 40px;
+
+    position: absolute;
+    top: 60%;
+    left: 40%;
 }
