--- a/src/SASS/TEMPLATES/TURISM/02-AnnouncementButton.scss
+++ b/src/SASS/TEMPLATES/TURISM/02-AnnouncementButton.scss
@@ -25,9 +25,36 @@
 
 @mixin styles_desktop () {
   border: 1px solid red;
-
+  
   width: 100%;
   height: 60vh;
+
+  
+  
+  .warpperImage{
+    width: 100%;
+    height: 60vh;
+
+    position: relative;
+
+    
+    border: 4px solid purple;
+
+    h1{
+      position: absolute;
+      top: 20px;
+      left: 40%;
+    }
+
+
+   
+    img{
+      width: 100%;
+      max-height: 100%;
+
+    }
+    
+  }
 }
 
 
@@ -38,6 +65,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+
+  overflow: hidden;
+
+  
 
   
   
