SASS change the name of the folder to MIXIN and setting every change

--- a/src/SASS/MIXINS/REUSABLE_COMPONENTS/Typesbuttons.scss
+++ b/src/SASS/MIXINS/REUSABLE_COMPONENTS/Typesbuttons.scss
@@ -1,5 +1,5 @@
 //VARIABLES (it musb be in the first position)
-@use '../../COMPONENTS/Variables.scss' as *;
+@use '../../MIXINS/Variables.scss' as *;
 
 @mixin InputButton_A () {
     background-color: $InputbackColor;
