--- a/src/SASS/TEMPLATES/TURISM/02-AnnouncementButton.scss
+++ b/src/SASS/TEMPLATES/TURISM/02-AnnouncementButton.scss
@@ -1,11 +1,11 @@
 //VARIABLES (it musb be in the first position)
-@use '../../COMPONENTS/Variables.scss' as *;
+@use '../../MIXINS/Variables.scss' as *;
 
 //MEDIA
-@import '../../COMPONENTS/MEDIA_QUERIES/MediaQueries.scss';
+@import '../../MIXINS/MEDIA_QUERIES/MediaQueries.scss';
 
 //mixins
-@import '../../COMPONENTS/REUSABLE_COMPONENTS/Typesbuttons.scss';
+@import '../../MIXINS/REUSABLE_COMPONENTS/Typesbuttons.scss';
 
 
 
