CONFIGURACIONES conexiones sass: 0.1

--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
@@ -5,7 +5,8 @@
 @import '../../MIXINS/MEDIA_QUERIES/MediaQueries.scss';
 
 //mixins
-@import '../../MIXINS/REUSABLE_MIXINS/Typesbuttons.scss';
+//@import '../../MIXINS/REUSABLE_MIXINS/Typesbuttons.scss';
+@import '../../MIXINS/REUSABLE_MIXINS/1-Index.scss';
 
 
 
