--- a/src/SASS/TEMPLATES/PAGES/01-TemplateUno.scss
+++ b/src/SASS/TEMPLATES/PAGES/01-TemplateUno.scss
@@ -1,8 +1,9 @@
 //VARIABLES (it musb be in the first position)
-@use '../../../MIXINS/Variables.scss' as *;
+@use '../../MIXINS/Variables.scss' as *;
 
 //MEDIA
-@import '../../../MIXINS/MEDIA_QUERIES/MediaQueries.scss';
+@import '../../MIXINS/MEDIA_QUERIES/MediaQueries.scss';
+
 
 
 
