--- a/src/SASS/index.scss
+++ b/src/SASS/index.scss
@@ -4,6 +4,12 @@
 //MEDIA
 @import './MIXINS/MEDIA_QUERIES/MediaQueries.scss';
 
+//MIXINS
+@import './MIXINS/Index.scss';
+
+//TEMPLATES
+@import './TEMPLATES/Index.scss';
+
 
 
 
