CONFIGURACIONES SECTION ONE: 0.2

--- a/src/SASS/MIXINS/Index.scss
+++ b/src/SASS/MIXINS/Index.scss
@@ -2,16 +2,16 @@
 //@use './Variables.scss' //VARIABLES (it musb be in the first position);
 
 //media queries
-@import './MEDIA_QUERIES/MediaQueries.scss';
+//@import './MEDIA_QUERIES/MediaQueries.scss';
 
 
 //mixins components
-@import './MIXINS_COMPONENTS/Index.scss';
+//@import './MIXINS_COMPONENTS/Index.scss';
 
 
 
 //reusable mixins
-@import './REUSABLE_MIXINS/1-Index.scss';
+//@import './REUSABLE_MIXINS/1-Index.scss';
 
 
 
