--- a/src/SASS/TEMPLATES/Index.scss
+++ b/src/SASS/TEMPLATES/Index.scss
@@ -1,5 +1,5 @@
 //MIXINS
-@import '../MIXINS/MIXINS_COMPONENTS/Index.scss';
+//@import '../MIXINS/MIXINS_COMPONENTS/Index.scss';
 
 //PAGES
-@import './PAGES/Index.scss';
+//@import './PAGES/Index.scss';
