--- a/src/SASS/index.scss
+++ b/src/SASS/index.scss
@@ -5,10 +5,10 @@
 @import './MIXINS/MEDIA_QUERIES/MediaQueries.scss';
 
 //MIXINS
-@import './MIXINS/Index.scss';
+//@import './MIXINS/Index.scss';
 
 //TEMPLATES
-@import './TEMPLATES/Index.scss';
+//@import './TEMPLATES/Index.scss';
 
 
 
