--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
@@ -5,24 +5,23 @@
 @import '../../MIXINS/MEDIA_QUERIES/MediaQueries.scss';
 
 //mixins
-//@import '../../MIXINS/REUSABLE_MIXINS/Typesbuttons.scss';
 @import '../../MIXINS/REUSABLE_MIXINS/1-Index.scss';
 
 
 
 @mixin styles_phone () {
-  border: 1px solid yellow;
+  border: 1px solid yellow; 
 
   height: 30vh;
   
 }
 
 @mixin styles_tablets () {
-  border: 1px solid blue;
+  border: 1px solid rgb(16, 219, 50);
 
   width: 100%;
   height: 50vh;
-}
+} 
 
 @mixin styles_desktop () {
   border: 1px solid red;
@@ -32,14 +31,14 @@
 
   
   
-  .warpperImage{
+  .warpperImage{ 
     width: 100%;
     height: 60vh;
 
     position: relative;
 
     
-    border: 4px solid purple;
+    border: 4px solid rgb(11, 25, 218);
 
     h1{
       position: absolute;
