--- a/src/SASS/TEMPLATES/PAGES/01-TemplateUno.scss
+++ b/src/SASS/TEMPLATES/PAGES/01-TemplateUno.scss
@@ -6,7 +6,7 @@
 
 
 
-
+ 
 @mixin styles_phone () {
   border: 1px solid yellow;
 
@@ -15,7 +15,7 @@
 }
 
 @mixin styles_tablets () {
-  border: 1px solid blue;
+  border: 1px solid rgb(149, 199, 32);
 
   width: 100%;
   height: 50vh;
