CONFIGURACIONES SECTION ONE: 0.3

--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/Index.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/Index.scss
@@ -1,6 +1,19 @@
+//MIXIN COMPONENTS
+
+//section one
 @import './01-ContainerSectionOne.scss';
+
+//section two
 @import './02.1-AnnouncementParagraph.scss';
+
+//section three
 @import './03-ChildrenWrapperImage.scss';
+
+//section four
 @import './03.1-ChildrenWrapperImageTwo.scss';
+
+//section five
 @import './04-WrapperArticle.scss';
+
+//section six
 @import './04.1-WrapperArticleTwo.scss';
