--- a/src/SASS/MIXINS/REUSABLE_MIXINS/Typesbuttons.scss
+++ b/src/SASS/MIXINS/REUSABLE_MIXINS/Typesbuttons.scss
@@ -1,10 +1,10 @@
 //VARIABLES (it musb be in the first position)
 @use '../../MIXINS/Variables.scss' as *;
 
-@mixin InputButton_A () {
-    background-color: $InputbackColor;
+@mixin InputButton_A ($color: $InputbackColor_A, $width: $InputWidth) {
+    background-color: $color;
     background-color: rgb(3, 46, 236);
-    width: 160px;
+    width: $width;
     height: 40px;
 
     position: absolute;
@@ -13,12 +13,10 @@
     
 }
 
-@mixin SendButton_B () {
-    background-color: red;
-    width: 160px;
+@mixin SendButton_B ($color: $InputbackColor_B, $width: $InputWidth ){
+    background-color: $color;
+    width: $width;
     height: 40px;
 
-    position: absolute;
-    top: 60%;
-    left: 40%;
+    
 }
