--- a/src/SASS/MIXINS/Variables.scss
+++ b/src/SASS/MIXINS/Variables.scss
@@ -10,9 +10,9 @@ $ancho-tablet: 820px;
 $ancho-computadora: 1024px;
 
 //styles buttons
-//Input button
-$InputbackColor: yellow;
-$InputbackColorTwo: blue;
-$InputWidth: 60px;
+$InputbackColor_A: rgb(158, 85, 51);
+$InputbackColor_B: rgb(118, 147, 243);
+$InputWidth: 300px;
 $InputHeight: 35px;
 
+ 
