--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
@@ -9,39 +9,31 @@
 
 
 
+
 @mixin styles_phone () {
-  border: 1px solid yellow; 
+  border: 1px solid yellow;
+  
+ 
 
   height: 30vh;
-  
-}
 
-@mixin styles_tablets () {
-  border: 1px solid rgb(16, 219, 50);
-
-  width: 100%;
-  height: 50vh;
-} 
-
-@mixin styles_desktop () {
-  border: 1px solid red;
-  
-  width: 100%;
-  height: 60vh;
-
-  
-  
   .warpperImage{ 
     width: 100%;
-    height: 60vh;
+    height: 30vh;
+    
 
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
 
     
-    border: 4px solid rgb(11, 25, 218);
+    border-radius: 15px solid rgb(245, 159, 119);
+    background-color: rgb(229, 243, 149);
 
     h1{
-      position: absolute;
+      
       top: 20px;
       left: 40%;
     }
@@ -53,34 +45,120 @@
       max-height: 100%;
 
     }
+
+    .StyleButton_B{
+      @include SendButton_B(yellow);
+      
+    }
+
     
+    
+  }
+  
+}
+
+@mixin styles_tablets () {
+  border: 1px solid rgb(16, 219, 50);
+
+  width: 100%;
+  height: 50vh;
+
+  display: flex;
+  flex-direction: column;
+
+  .warpperImage{ 
+    width: 100%;
+    height: 55vh;
+    
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    position: relative;
+
+
+    
+    border-radius: 15px solid rgb(245, 159, 119);
+    background-color: rgb(135, 150, 240);
+
+    h1{
+      
+      top: 20px;
+      left: 40%;
+    }
+
+
+   
+    img{
+      width: 100%;
+      max-height: 100%;
+
+    }
+
+    .StyleButton_B{
+      @include SendButton_B(blue);
+      position: absolute;
+      top: 50%;
+    }
+    
+  }
+  
+} 
+
+@mixin styles_desktop () {
+  border: 1px solid red;
+  
+  width: 100%;
+  height: 60vh;
+  padding: 10px;
+
+  
+  
+  .warpperImage{ 
+    width: 100%;
+    height: 55vh;
+    
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    position: relative;
+    
+    border-radius: 15px solid rgb(245, 159, 119);
+    background-color: rgb(245, 159, 119);
+
+    h1{
+      
+      top: 20px;
+      left: 40%;
+    }
+
+
+    img{
+      width: 100%;
+      max-height: 100%;
+
+    }    
+    
+  }
+
+  .StyleButton_B{
+    @include SendButton_B(red);
+    position: absolute;
+    top: 50%;
   }
 }
 
-
-
-
 .containerSectionOne{
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-
-  overflow: hidden;
-
-  
-
-  
   
   .StyleButton_A{
     @include InputButton_A();
   }
 
-  .StyleButton_B{
-    @include SendButton_B();
-  }
-
-  text-align: center;
   @include media-query($media_phone){
     @include styles_phone();
   }
