LAYOUT.JSX: cambio de carpeta

--- a/src/SASS/MIXINS/REUSABLE_MIXINS/1-Index.scss
+++ b/src/SASS/MIXINS/REUSABLE_MIXINS/1-Index.scss
@@ -2,5 +2,9 @@
 @import './Navbar.scss';
 @import './01-Sections.scss';
 @import './Cards.scss';
+
+//layout
 @import './Layout.scss';
+
+//buttons
 @import './Typesbuttons.scss';
