--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
@@ -11,11 +11,13 @@
 
 
 @mixin styles_phone () {
-  border: 1px solid yellow;
+  
   
  
 
   height: 30vh;
+
+  border: 1px solid rgb(6, 70, 245);
 
   .warpperImage{ 
     width: 100%;
@@ -66,6 +68,10 @@
   display: flex;
   flex-direction: column;
 
+  border-radius: 15px solid blue;
+  background-color: rgb(135, 150, 240);
+
+
   .warpperImage{ 
     width: 100%;
     height: 55vh;
@@ -80,9 +86,7 @@
 
 
     
-    border-radius: 15px solid rgb(245, 159, 119);
-    background-color: rgb(135, 150, 240);
-
+   
     h1{
       
       top: 20px;
@@ -108,13 +112,16 @@
 } 
 
 @mixin styles_desktop () {
-  border: 1px solid red;
+  
   
   width: 100%;
   height: 60vh;
   padding: 10px;
 
   
+  
+  border: 1px solid rgb(233, 31, 4);
+  background-color: #f59f77;
   
   .warpperImage{ 
     width: 100%;
@@ -128,8 +135,8 @@
 
     position: relative;
     
-    border-radius: 15px solid rgb(245, 159, 119);
-    background-color: rgb(245, 159, 119);
+    border-radius: 15px solid rgb(65, 231, 14);
+    background-color: rgb(196, 235, 186);
 
     h1{
       
