--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/03-ContainerSectionThree.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/03-ContainerSectionThree.scss
@@ -36,15 +36,18 @@
 }
 
 @mixin styles_phone () {
-  border: 1px solid yellow;
+  
 
- 
 
-  height: 30vh;
+  height: 35vh;
   margin: 0 auto;
 
-  display: flex;
-  justify-content: center;
+  padding: 20px;
+
+  
+
+  border: 1px solid rgb(6, 70, 245);
+  background-color: rgb(229, 243, 149);
   
 
   figure{
@@ -54,10 +57,12 @@
     
     
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid rgb(9, 0, 128);
+    border: 1px solid green;
+    background-color: rgb(158, 236, 158);
 
     img{
 
@@ -73,26 +78,32 @@
 }
 
 @mixin styles_tablets () {
-  border: 1px solid blue;
-  
-  
-
+    
   height: 40vh;
   margin: 0 auto;
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+
   
+  
+  border: 1px solid blue;
+  background-color: rgb(160, 160, 235);
+
+
 
   figure{
 
     width: 100%;
+
+    padding: 20px;
     
     display: flex;
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid purple;
+    border-radius: 15px solid rgb(65, 231, 14);
+    background-color: rgb(196, 235, 186);
 
     img{
 
@@ -100,36 +111,42 @@
       height: 250px;
       min-width: 100px;
 
-      border: 1px solid purple;
+      border: 1px solid yellow;
+      background-color: rgb(245, 245, 148);
     }
   }
 
 }
 
 @mixin styles_desktop () {
-  border: 1px solid red;
-
   
-
-  height: 70vh;
+  height: 30vh;
   margin: 0 auto;
-
-  display: flex;
-  justify-content: center;
-
+  padding: 10px;
   
+  
+  
+  
+  border: 1px solid rgb(233, 31, 4);
+  background-color: #f59f77;
   
 
   figure{
 
     width: 100%;
+    height: auto;
+    
+    padding: 10px;
+
     display: flex;
     justify-content: space-around;
     align-items: center;
 
+
     overflow: hidden;
 
-    border: 1px solid purple;
+    border-radius: 15px solid rgb(65, 231, 14);
+    background-color: rgb(196, 235, 186);
 
     img{
 
@@ -138,10 +155,13 @@
       max-width: 100%;
       max-height: 100%;
 
-      min-width: 500px;
+      min-width: 450px;
       min-height: 250px;
 
-      border: 1px solid rgb(57, 243, 10);
+      padding: 20px;
+
+      border: 1px solid yellow;
+      background-color: rgb(245, 245, 148);
     }
   }
 }
@@ -151,7 +171,7 @@
 
 
 
-.ChildrenWrapperImage{
+.containerSectionThree{
   @include media-query($media_phone){
     @include styles_phone();
   }
