--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/Index.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/Index.scss
@@ -10,10 +10,12 @@
 @import './03-ContainerSectionThree.scss';
 
 //section four
+@import './04-ContainerSectionFOUR.scss';
+
+
+//section four
 @import './03.1-ChildrenWrapperImageTwo.scss';
 
-//section five
-@import './04-WrapperArticle.scss';
 
 //section six
 @import './04.1-WrapperArticleTwo.scss';
