--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/01-ContainerSectionOne.scss
@@ -15,9 +15,10 @@
   
  
 
-  height: 30vh;
+  height: auto;
 
   border: 1px solid rgb(6, 70, 245);
+  background-color: rgb(229, 243, 149);
 
   .warpperImage{ 
     width: 100%;
