--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/04-ContainerSectionFOUR.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/04-ContainerSectionFOUR.scss
@@ -5,17 +5,24 @@
 @import '../../MIXINS/MEDIA_QUERIES/MediaQueries.scss';
 
 @mixin useWrapperArticle () {
-  border: 1px solid green;
+  
 
   display: flex;
   justify-content: space-around;
 
   width: 100%;
-  height: 300px;
+  height: 400px;
+  padding: 10px;
+
+  border-radius: 15px solid rgb(65, 231, 14);
+  background-color: rgb(196, 235, 186);
 }
 
 @mixin styles_phone () {
   border: 1px solid yellow;
+
+  border: 1px solid rgb(6, 70, 245);
+  background-color: rgb(229, 243, 149);
 
   .Wrapperarticle{
     /* @include useWrapperArticle(); */
@@ -32,7 +39,9 @@
       width: 100%;
 
 
+
       border: 1px solid rgb(88, 3, 245);
+      background-color: orange;
 
       img{
 
@@ -46,6 +55,7 @@
         text-align: center;
 
         width: 100%;
+        height: auto;
         
 
         color: red;
@@ -58,7 +68,9 @@
 }
 
 @mixin styles_tablets () {
+
   border: 1px solid blue;
+  background-color: rgb(160, 160, 235);
 
   .Wrapperarticle{
     @include useWrapperArticle();
@@ -71,7 +83,8 @@
       width: 30%;
 
 
-      border: 1px solid rgb(88, 3, 245);
+      border: 1px solid yellow;
+      background-color: rgb(245, 245, 148);
 
       img{
 
@@ -98,13 +111,21 @@
 }
 
 @mixin styles_desktop () {
-  border: 1px solid red;
+  
 
-  height: 40vh;
+  height: 70vh;
   padding: 20px;
 
+  
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  
+  align-items: center;
+
+  border: 1px solid rgb(233, 31, 4);
+  background-color: #f59f77;
+  
+
 
   .Wrapperarticle{
     @include useWrapperArticle();
@@ -114,15 +135,21 @@
       justify-content: space-between;
       
       width: 30%;
+      height: auto;
 
+      padding: 10px;
 
-      border: 1px solid rgb(88, 3, 245);
+      border: 1px solid yellow;
+      background-color: rgb(245, 245, 148);
+      
 
       img{
 
-        width: 40%;
+        width: 50%;
+        height: auto;
 
         border: 1px solid purple;
+        background-color: orange;
       }
 
       p{
@@ -143,11 +170,7 @@
 
 .ContainerArticle{
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
+ 
   @include media-query($media_phone){
     @include styles_phone();
   }
