FOOTER: estilos footer 0.1

--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/Index.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/Index.scss
@@ -13,8 +13,8 @@
 @import './04-ContainerSectionFOUR.scss';
 
 
-//section four
-@import './03.1-ChildrenWrapperImageTwo.scss';
+//section five
+@import './05-ContainerSectionFIVE.scss';
 
 
 //section six
