--- a/src/SASS/MIXINS/MIXINS_COMPONENTS/Index.scss
+++ b/src/SASS/MIXINS/MIXINS_COMPONENTS/Index.scss
@@ -4,7 +4,7 @@
 @import './01-ContainerSectionOne.scss';
 
 //section two
-@import './02.1-AnnouncementParagraph.scss';
+@import './02-ContainerSectionTWO.scss';
 
 //section three
 @import './03-ContainerSectionThree.scss';
@@ -17,5 +17,3 @@
 @import './05-ContainerSectionFIVE.scss';
 
 
-//section six
-@import './04.1-WrapperArticleTwo.scss';
